Bugfixes and updates:
- Narrow dashboard layout bugfixes
- Icon update
- Paper wallet template update
- Add QR code to print
- Write Seed Down view layout update

--- a/src/desktop/src/ui/components/modal/modal.scss
+++ b/src/desktop/src/ui/components/modal/modal.scss
@@ -1,3 +1,5 @@
+$footer: 70px;
+
 .backdrop {
     display: flex;
     align-items: center;
@@ -24,7 +26,8 @@
         z-index: 1;
         background: var(--body-bg);
     }
-    &.confirm {
+    &.confirm,
+    &.global &.fullscreen {
         &:before {
             opacity: 1;
         }
@@ -45,8 +48,45 @@
         }
     }
 
+    &.global {
+        z-index: 1002;
+    }
+
     &.inline {
         position: static;
+    }
+
+    &.fullscreen {
+        > div {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            width: 100vw;
+            height: 100vh;
+            padding-bottom: 80px;
+            text-align: center;
+        }
+        footer {
+            position: absolute;
+            bottom: 0px;
+            height: $footer;
+            width: 100%;
+            display: flex;
+            align-items: stretch;
+            bottom: 0px;
+            left: 0px;
+            margin: 0px;
+            padding: 0px;
+
+            button {
+                margin: 0px;
+            }
+            * {
+                flex: 1;
+            }
+        }
     }
 
     footer {
